--- a/templates/partials/decider/agenda.hbs
+++ b/templates/partials/decider/agenda.hbs
@@ -1,5 +1,5 @@
 <div class="row room-container">
-	<h3>"Now everyone quietly review your agenda items. You'll earn extra coins if these are included in the winning proposal. Keep them secret!"</h3>
+	<h3 class="read">"Now everyone quietly review your agenda items. You'll earn extra coins if these are included in the winning proposal. Keep them secret!"</h3>
 
 	Press next when everyone's ready
 </div>
