--- a/templates/partials/decider/deliberate_instructions.hbs
+++ b/templates/partials/decider/deliberate_instructions.hbs
@@ -1,7 +1,7 @@
 <div class="row room-container">
 	Read out loud:
 
-	<h3>"Now we'll take {{config.deliberateSeconds}} seconds to talk about your proposals. Once the time runs out you'll have an opportunity to buy more time. Then I'll choose the winning proposal."</h3>
+	<h3 class="read">"Now we'll take {{config.deliberateSeconds}} seconds to talk about your proposals. Once the time runs out you'll have an opportunity to buy more time. Then I'll choose the winning proposal."</h3>
 
 	When everyone is ready, press next.
 </div>
