--- a/templates/partials/decider/think_instructions.hbs
+++ b/templates/partials/decider/think_instructions.hbs
@@ -1,7 +1,7 @@
 <div class="row room-container">
 	Read out loud:
 
-	<h3>"You will have {{config.thinkSeconds}} seconds to think of a proposal from your character's perspective."</h3>
+	<h3 class="read">"You will have {{config.thinkSeconds}} seconds to think of a proposal from your character's perspective."</h3>
 
 	When everyone is ready, press next.
 </div>
