--- a/public/styles/_core/variables.scss
+++ b/public/styles/_core/variables.scss
@@ -1,15 +1,37 @@
 // Images
 $background-main: url(https://res.cloudinary.com/engagement-lab-home/image/upload/v1/emerging-citizens/images/layout/htyi/background_tileable.png);
+$player-one-logo: url(https://res.cloudinary.com/engagement-lab-home/image/upload/v1486743670/at-stake/yellow_avatar.png);
+$player-two-logo: url(https://res.cloudinary.com/engagement-lab-home/image/upload/v1486743596/at-stake/avatar_green.png);
+$player-three-logo: url(https://res.cloudinary.com/engagement-lab-home/image/upload/v1486743592/at-stake/avatar_pink.png);
+$player-four-logo: url(https://res.cloudinary.com/engagement-lab-home/image/upload/v1486743590/at-stake/avatar_red.png);
+$player-five-logo: url(https://res.cloudinary.com/engagement-lab-home/image/upload/v1486743594/at-stake/avatar_orange.png);
 
 
 // Colors
 $primary-color: #333;
 $logo-color: #00c5c2;
-
 $color-turquoise: #1EB4BB;
 $color-seafoam: #00D6B4;
 $color-orange: #febb2c;
 $color-pink: #fd2c76;
+
+// Player One
+$player-blue: #35AFD2;
+$player-blue-tint: #85CFE6;
+// Player Two
+$player-green: #3EB7A1;
+$player-green-tint: #85D3C5;
+// Player Three 
+$player-pink: #B84B88;
+$player-pink-tint: #D493B8;
+// Player Four
+$player-red: #B84D3D;
+$player-red-tint: #D49589;
+// Player Five
+$player-purple: #B048E7;
+$player-purple-tint: #D090EF; 
+
+
 
 
 // Heights
