--- a/templates/partials/script/decider_events.hbs
+++ b/templates/partials/script/decider_events.hbs
@@ -16,8 +16,9 @@ var deciderEvents = function(eventId, eventData) {
         case 'players:update':
 
             var staticPlayers = $('.player-static');
-            var currentPlayers = _.pluck(eventData, 'username');
-
+            var currentPlayers = _.map(eventData.players, function(player){
+                return {name: player.username, icon: player.index};
+            });
             {{!-- // Allow to start?
             if(currentPlayers.length === 2)
             {
@@ -25,12 +26,11 @@ var deciderEvents = function(eventId, eventData) {
                 startAnim.from($('#btn-start-game'), 1, {scale:0, autoAlpha: 0, ease:Elastic.easeOut})
             } --}}
 
-            _.each(currentPlayers, function(name, index) {
+            _.each(currentPlayers, function(player, index) {
 
-                var nameFormatted = (name.length <= 15) ? name : name.substring(0, 15) + "...";
+                var nameFormatted = (player.name.length <= 15) ? player.name : playername.substring(0, 15) + "...";
 
-                $('#players').append('<div class="col-sm-3">' + nameFormatted + '</div>');
-
+                $('#players').append('<div class="col-sm-3 player-logo"><div class="logo" id="player-' + player.icon + '"></div><p>' + nameFormatted + '</p></div>');
 
             });
 
