--- a/templates/partials/shared/roles.hbs
+++ b/templates/partials/shared/roles.hbs
@@ -1,13 +1,10 @@
 <h1>Roles for this round are...</h1>
+		
+	<h3><b>Decider:</b> {{decider}}</h3>
+	<br>
 
-{{#each this}}
-
-	{{#if decider}}
-		<div class="row"><b>Decider:</b> {{username}}</div>
-	{{else}}
-		<div class="row"><b>{{title}}:</b> {{username}}</div>
-	{{/if}}
-
+{{#each players}}
+	<div class="col-sm-3 player-logo"><div class="logo" id="player-{{icon}}"></div><b>{{title}}:</b> {{username}}</div>
 {{/each}}
 
 {{!-- {{#if decider}} --}}
