--- a/templates/views/decider/index.hbs
+++ b/templates/views/decider/index.hbs
@@ -28,12 +28,12 @@
 
     <div class="row" id="waiting" style="display:none">
         <h1 id="game-code">{{gameCode}}</h1>
-        <h2>You are the decider</h2>
-        <h3>Waiting for players</h3>
+        <p>You are the decider</p>
+        <p>Waiting for players</p>
 
 
         <div class="col-sm-3"></div>
-        <div class="row col-sm-9" id="players">
+        <div class="row" id="players">
 
         </div>
         <div class="col-sm-3"></div>
