--- a/templates/views/game/player.hbs
+++ b/templates/views/game/player.hbs
@@ -50,15 +50,15 @@
 
   <div class="row waiting" style="display:none">
     <h1 class="access-code"></h1>
-    <h2>You are the decider</h2>
-    <h3>Waiting for players</h3>
+    <p>You are the decider</p>
+    <p>Waiting for players</p>
 
     <div class="col-sm-12">
       <div class="row" id="players">
 
       </div>
     </div>
-    <div class="form row {{!-- hidden-el --}}" id="start">
+    <div class="form row" id="start">
       <input id="btn-start-game" data-event="game:start" class="post-button submit" type="submit" name="submit" value="start">
     </div>
   </div>
