--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -85,7 +85,7 @@
 
                 </div>
 
-                <footer id="bottom-bar">
+                <footer id="bottom-bar" style="display:none">
                     
                     <div id="currency" class="col-sm-6">
                         <div id="player-coins">[coins] <span></span></div>
