--- a/public/styles/_core/playerview.scss
+++ b/public/styles/_core/playerview.scss
@@ -1,7 +1,7 @@
 #gameContent {
 	background-color: $color-turquoise;
 	// Display as table to vertically center content elements
-	display: table;	
+	// display: table;	
 	// Remove margin and extend width/height from table display settings
 	// margin: 0px;
 	// width: 100%;
@@ -140,8 +140,8 @@
 	background-color: white;
 	color: black;
   // min-height: 250px;
-  display: table-cell;
-  vertical-align: middle;
+  // display: table-cell;
+  // vertical-align: middle;
 
 	h1 {
 		font-size: 6em;
@@ -151,7 +151,7 @@
 		@at-root section {
 			height: 100%;
 			width: 100%;
-			display: table;
+			// display: table;
 		}
 	}
 
@@ -160,8 +160,8 @@
 // LOGIN
 
 #decider, #login {
-	display: table-cell;
-	vertical-align: middle;
+	// display: table-cell;
+	// vertical-align: middle;
 }
 
 #login-header {
@@ -268,22 +268,16 @@ footer#bottom-bar {
 .player-bio {
 	height: 100%;
 	width: 100%;
-	display: table;
-
 	.room-container {
 
-		height:30%;
-		display: table-cell;
-		vertical-align: middle;
+
 	}
 }
 
 #rules {
 	height: 100%;
-	display: table;
 	.screen {
 		// These are hidden by default
 		display: none;
-		vertical-align: middle;
 	}
 }
