fix silly table-cell

--- a/public/styles/core.scss
+++ b/public/styles/core.scss
@@ -213,11 +213,11 @@ footer {
 	}
 
 }
-#gameContent {
+// #gameContent {
 
-	padding: 40px 15px;
-	padding-top: 3%;
-  text-align: center;
+// 	padding: 40px 15px;
+// 	padding-top: 3%;
+//   text-align: center;
 
-}
+// }
 // END Main Content
