--- a/templates/partials/script/player_logic.hbs
+++ b/templates/partials/script/player_logic.hbs
@@ -277,7 +277,7 @@ $('#btn_new_game').click(function() {
 
             $('#login').fadeOut(function() {
                 $('#decider').fadeIn(function(){
-                    $('.lobby#decider').css('display','table-cell');
+                    $('.lobby#decider').css('display','block');
 
                     // Tell mobile action has completed
                     $('body').trigger('mobileCallback');
