--- a/public/styles/core.css
+++ b/public/styles/core.css
@@ -153,7 +153,9 @@
 
 #gameContent {
   background-color: #1EB4BB;
-  height: 100%; }
+  height: 100%;
+  text-align: center;
+  padding: 40px; }
   #gameContent.in-game {
     background-color: white; }
     #gameContent.in-game footer#bottom-bar {
@@ -498,8 +500,3 @@ footer {
       display: none; }
     .gameLanding #mobile {
       display: block; } }
-
-#gameContent {
-  padding: 40px 15px;
-  padding-top: 3%;
-  text-align: center; }
